<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.openforis.collect.earth</groupId>
	<artifactId>collect-earth</artifactId>
	<version>1.7.13-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>Collect Earth</name>
	<description>Collect Earth - Augmented Visual Interpretation</description>
	<modules>
		<module>collect-earth-core</module>
		<module>collect-earth-app</module>
		<module>collect-earth-sampler</module>
		<module>collect-earth-installer</module>
	</modules>
	<organization>
		<name>Food And Agriculture Organization of the UN</name>
		<url>http://www.fao.org</url>
	</organization>

	<properties>
		<java.version>1.8</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<collect.version>3.24.15</collect.version>
		<spring.version>5.1.1.RELEASE</spring.version>
		<project.scm.id>github.com</project.scm.id>
	</properties>

	<distributionManagement>
		<repository>
			<id>openforis-releases</id>
			<name>Open Foris Repository</name>
			<url>http://www.openforis.org/nexus/content/repositories/releases/</url>
		</repository>
		<snapshotRepository>
			<id>openforis-snapshots</id>
			<name>Open Foris Snapshots Repository</name>
			<url>http://www.openforis.org/nexus/content/repositories/snapshots/</url>
		</snapshotRepository>
	</distributionManagement>

	<scm>
		<developerConnection>scm:git:https://github.com/openforis/collect-earth.git</developerConnection>
		<tag>collect-earth-1.7.10</tag>		
	</scm>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>2.3.2</version>
					<configuration>
						<source>${java.version}</source>
						<target>${java.version}</target>
						<encoding>${project.build.sourceEncoding}</encoding>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-release-plugin</artifactId>
					<version>2.5.3</version>
		    	</plugin>
		    	<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-dependency-plugin</artifactId>
					<version>2.10</version>
		    	</plugin>
		    	 <plugin>
			      <groupId>org.codehaus.mojo</groupId>
			      <artifactId>versions-maven-plugin</artifactId>
			      <version>2.5</version>
			    </plugin>

			</plugins>
		</pluginManagement>
	</build>
	
	<repositories>
		<repository>
			<id>openforis-releases</id>
			<name>Open Foris Repository</name>
			<url>http://www.openforis.org/nexus/content/repositories/releases/</url>
		</repository>
		<repository>
			<id>openforis-snapshots</id>
			<name>Open Foris Snapshots Repository</name>
			<url>http://www.openforis.org/nexus/content/repositories/snapshots/</url>
		</repository>
		<repository>
			<id>openforis-3rd-party</id>
			<name>Open Foris Repository</name>
			<url>http://www.openforis.org/nexus/content/repositories/thirdparty/</url>
		</repository>
	</repositories>
	
	<dependencyManagement>
	<dependencies>
		<dependency>
			<groupId>org.openforis.collect.earth</groupId>
			<artifactId>collect-earth-core</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>org.openforis.collect.earth</groupId>
			<artifactId>collect-earth-sampler</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>org.openforis.collect</groupId>
			<artifactId>collect-core</artifactId>
			<version>${collect.version}</version>
		</dependency>

		
	</dependencies>
	</dependencyManagement>
	<url>http://www.openforis.org/tools/collect-earth.html</url>

</project>